# CS242-Computing-at-Scale

./: CS242_NAS_dev.ipynb  README.md  evaluation.py  mlp.py  sample_points.py
Autonomous Differential Equations/: lotka_volterra.ipynb  main.py  model.pt
Lorenz_system/: X_pinn_lorenz.pkl  X_semigroup_lorenz.pkl  X_smooth_lorenz.pkl  init_values_100000.npy  init_values_100000_normalized.npy  init_values_100000_scaled1.npy  init_values_10000_normalized.npy  init_values_10000_scaled1.npy  init_values_50000_normalized.npy  init_values_50000_scaled1.npy  lorenz_system.ipynb  model_lorenz.pkl  simulate_lorenz_scipy.ipynb
Lotka-Volterra/: README.md  inverse_lotka_volterra_4_param_2_ivp.ipynb  lotka_volterra.ipynb  lotka_volterra_inverse_problem.ipynb
Neural Architecture Search/: README.md  Semigroup_PINN_NAS_demo.ipynb
Relative Representations Code/: setup.cfg
Relative Representations Code/conf/train/: classification.yaml  reconstruction.yaml
Relative Representations Code/experiments/fig_latent-rotation-comparison/: isodeformation.ipynb
Relative Representations Code/experiments/sec_model-reusability-ae/: visualize.ipynb
Relative Representations Code/experiments/sec_model-reusability-text/: performance.ipynb
Relative Representations Code/src/rae/ui/: modularity.py
Robertson/: robertson.ipynb
Time-consistent Physics-Informed Neural Networks for Autonomous ODEs/: 2d_ODE_proof_of_concept.ipynb
code/: plot.py  sample_points.py  tcpinn.py
neural_architecture_search/: MLP_NAS.ipynb  README.md
nonlinear_ode/: nonlinear_ode_example.ipynb
(+39 files in other folders)
