[metadata]
name = rae
description = Relative latent spaces
url = anonymized_url
long_description = file: README.md
author = anonymized_author
author_email = anonymized_email
keywords = python
license = MIT Licence

[options]
scripts =
    src/rae/scripts/getckpts

zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core>=0.1.0,<0.2

    # Add project specific dependencies
    # Stuff easy to break with updates
    pytorch-lightning>=1.5.8,<1.6
    hydra-core
    wandb
    streamlit
    backports.strenum
    plotly
    scikit-learn==1.0.2
    seaborn
    numerize
    setuptools_scm
    datasets
    transformers
    gensim
    spacy
    fasttext
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    distinctipy
    tueplots
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm
    timm
    jupyter

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
